# scao

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SCAO_Enterprise_Spec.docx  benchmark.py  pyproject.toml  report.20260420.211516.14296.0.001.json  results_benchmark.csv  results_curves.csv  results_multiscale.csv  results_multiscale_curves.csv  results_multiscale_new.csv  results_multiscale_new_curves.csv  results_multiscale_v2.csv  results_multiscale_v2_curves.csv  results_multiscale_v3.csv  results_multiscale_v3_curves.csv  results_multiscale_v4.csv  results_multiscale_v4_curves.csv  results_multiscale_v5.csv  results_multiscale_v5_curves.csv  results_scao_vs_adamw.csv  results_v10.csv  results_v10_curves.csv  results_v11.csv  results_v11_500.csv  results_v11_500_curves.csv  results_v11_curves.csv  results_v7.csv  results_v7_curves.csv  results_v8.csv  results_v8_curves.csv  results_v9.csv  results_v9_curves.csv  results_wikitext.csv  scao_vs_shampoo_pro.py  setup.py
.github/workflows/: ci.yml  publish.yml
benchmark/: train_1m.py  train_local.py
benchmark/scao_vs_adamw_bench/: trainer_state-AdamW.json  trainer_state-SCAO.json
benchmark/scao_vs_shampoo_bench/: README.md  scao_vs_shampoo_pro.py
configs/: base.yaml  gpt2_medium.yaml  gpt2_small.yaml  gpt_small.yaml  llama_1b.yaml  vit_small.yaml
examples/: inference.py  scao.py
examples/benchmarks/: benchmark_4b.py
scao/: __init__.py  distributed.py  logging.py  optimizer.py  preconditioner.py  utils.py
scao/benchmarks/: compare_adamw_scao.py  gpt_comparison.py  gpt_scale_benchmark.py  synthetic_benchmark.py  wikitext_benchmark.py
scao/cuda/: __init__.py  low_rank_ops.cu  setup.py
scao/integrations/: huggingface.py
scao/tests/: __init__.py  test_ddp.py  test_optimizer.py  test_profiling.py
scripts/: bench_125m_350m.py  bench_ddp.py  bench_largescale.py  kaggle_kernel_scao.py  kernel-metadata.json  push_to_kaggle.py  run_experiment.py  run_experiment.sh  scao_colab_benchmark.ipynb
