[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scao"
version = "0.1.1"
description = "Sparse Curvature-Aware Adaptive Optimizer — second-order training at near-AdamW cost"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
keywords = [
  "optimizer", "deep-learning", "second-order", "pytorch",
  "kronecker", "shampoo", "fisher-information", "llm", "transformer",
]
authors = [
  { name = "SCAO Authors" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "torch>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/whispering3/scao"
"Bug Tracker" = "https://github.com/whispering3/scao/issues"
Documentation = "https://github.com/whispering3/scao#readme"
Changelog = "https://github.com/whispering3/scao/blob/main/CHANGELOG.md"
Paper = "https://arxiv.org/abs/XXXX.XXXXX"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov",
  "mypy>=1.5",
  "ruff>=0.1",
  "build",
  "twine",
]
cuda = [
  "torch>=2.0.0",
]
hf = [
  "transformers>=4.30.0",
  "datasets>=2.0.0",
]
all = [
  "transformers>=4.30.0",
  "datasets>=2.0.0",
  "mypy>=1.5",
  "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scao*"]
exclude = ["scao/tests*", "scao/benchmarks*", "scao/cuda*"]

[tool.setuptools.package-data]
scao = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["scao/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "T20"]
ignore = [
  "E501",   # line too long (handled by formatter)
  "B008",   # function call in default argument (common in torch)
  "T201",   # print statements OK in benchmarks/logging
]

[tool.ruff.lint.per-file-ignores]
"scao/tests/*" = ["T201", "F841"]
"scao/benchmarks/*" = ["T201"]

